scrollbar lose focus fixed

--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -66,7 +66,7 @@ p {
 	overflow: auto !important;
 }
 .hidden {
-	display: none !important;
+	visibility: hidden !important;
 }
 
 .r-border {
